# didakt-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Providers.cmake
config/: config.json
src/: Camera.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Tilemap.cpp  Window.cpp  Window.h  main.cpp
src/core/: Assert.h  Config.cpp  Config.h  Engine.cpp  Engine.h  LogLevel.h  Logger.cpp  Logger.h  Window.cpp  Window.h
src/drivers/interfaces/: IInputDriver.h
src/drivers/sdl/: SDLInputDriver.cpp  SDLInputDriver.h
src/ecs/: RegistryManager.cpp  RegistryManager.h
src/ecs/components/: BoxColliderComponent.h  RenderComponent.h  RigidBodyComponent.h  SpriteComponent.h  SpriteSheetComponent.h  TilemapComponent.h  TransformComponent.h
src/ecs/systems/: MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
src/events/: EventBus.h
src/input/: InputManager.cpp  InputManager.h  Key.h  MouseButton.h
src/providers/: ProviderManagerFactory.cpp  ProviderManagerFactory.h
src/providers/interfaces/: IAssetProvider.h  IInputProvider.h  ILoggingProvider.h  IProviderManager.h  IRenderProvider.h  ISystemEventProvider.h  ISystemTimerProvider.h  IWindowProvider.h
src/providers/sdl/: SDLAssetProvider.cpp  SDLAssetProvider.h  SDLInputProvider.cpp  SDLInputProvider.h  SDLLoggingProvider.cpp  SDLLoggingProvider.h  SDLProviderManager.cpp  SDLProviderManager.h  SDLRenderProvider.cpp  SDLRenderProvider.h  SDLSystemEventProvider.cpp  SDLSystemEventProvider.h  SDLSystemTimerProvider.cpp  SDLSystemTimerProvider.h  SDLWindowProvider.cpp  SDLWindowProvider.h
src/render/: AssetManager.cpp  AssetManager.h  Camera.h  RenderColor.h  RenderMath.cpp  RenderMath.h  RenderRect.h  TextureHandle.h  Tilemap.h
tests/core/: ConfigTests.cpp  EngineTimingTests.cpp  LoggerTests.cpp
tests/ecs/: MovementSystemTests.cpp  RenderSystemTests.cpp
tests/events/: EventBusTests.cpp
tests/input/: InputManagerTests.cpp
tests/render/: AssetManagerTests.cpp  CameraTests.cpp  RenderMathTests.cpp
